# aoc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
input/2019/: day10_test06.txt
input/2022/: day07_test02.txt  day09_part02_test03.txt  day09_test_diagonal_down_left.txt  day09_test_diagonal_down_right.txt  day09_test_diagonal_left_down.txt  day09_test_diagonal_left_up.txt  day09_test_diagonal_right_down.txt  day09_test_diagonal_right_up.txt  day09_test_diagonal_then_lateral.txt  day09_test_diagonal_up_left.txt
input/2023/: day13_test04.txt  day13_test05.txt  day13_test06.txt  day17_test02.txt  day17_test03.txt  day18_test02.txt  day18_test03.txt
input/2024/: day15_test04.txt  day15_test06.txt  day15_test08.txt  day16_test03.txt  day16_test07.txt  day19_test03.txt  day20_test02.txt  day21_test08.txt
src/: lib.rs
src/aoc/: day15.rs
src/aoc2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
src/aoc2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  mod.rs
src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  (+1 more)
(+2 files in other folders)
