[package]
name = "aoc"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/McDamon/aoc"
authors = ["Andrew McMahon <andrew.p.mcmahon@gmail.com>"]

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
colorsys = "0.7.1"
csv = "1.3.1"
enum-iterator = "2.3.0"
hashbrown = "0.15.5" # crates: disable-check
itertools = "0.14.0"
lazy_static = "1.5.0"
nalgebra = "0.34.0"
petgraph = "0.8.2"
regex = "1.11.2"
stacker = "0.1.21"

#[profile.test]
#inherits = "release"

[profile.release]
debug = true